# shadowverse-api-server

./: .env.example  .gitignore  .sqlrc.example.json  Cargo.toml  readme.md
migrations/2021-02-12-082642_create_table_cards/: up.sql
src/: lib.rs  main.rs  schema.rs
src/cmd/: fetch.rs  http.rs  mod.rs
src/services/: mod.rs
src/services/http/: mod.rs
src/services/http/card/: mod.rs
src/services/http/card/model/: mod.rs
src/services/shadowverse/: mod.rs
src/services/shadowverse/domain/: mod.rs
src/services/shadowverse/model/: mod.rs
src/services/shadowverse/repository/: mod.rs
src/shared/: postgres.rs
