[package]
authors = ["Tigor Hutasuhut <tigor.hutasuhut@gmail.com>"]
edition = "2018"
name = "shadowverse"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-server = "1.0.4"
actix-web = "3"
async-trait = "0.1.42"
clap = "3.0.0-beta.2"
diesel = {version = "1.4.4", features = ["postgres"]}
dotenv = "0.15.0"
reqwest = "0.11.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1"
signal-hook = "0.3.4"
